# DevelopersHub-Intenship-Task

./: .gitignore  pyproject.toml
task_1-Iris EDA/: main.ipynb
task_2-Predict Future Stock Price/: main.ipynb
task_3-Heart Disease Prediction/: main.ipynb
task_4-Health Query Chatbot/: main.ipynb  main.py  prompt.py
